adding production deployement

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
         - DISPLAY=":0.0" SSH_ASKPASS="/tmp/askpass" setsid ssh-add /tmp/monitoolbackdev </dev/null
       script: ./CI/deploy-dev.sh /tmp/monitoolbackdev
     - stage: deploy
-      if: branch = master
+      if: branch = uat
       install:
         # Decrypt the git_deploy_key.enc key into /tmp/monitoolbackuat
         - openssl aes-256-cbc -K $encrypted_4ee49d49f72a_key -iv $encrypted_4ee49d49f72a_iv -in keys/monitoolbackuat.enc -out /tmp/monitoolbackuat -d
@@ -32,4 +32,18 @@ jobs:
         # Add the key to the authentication agent
         - DISPLAY=":0.0" SSH_ASKPASS="/tmp/askpass" setsid ssh-add /tmp/monitoolbackuat </dev/null
       script: ./CI/deploy-uat.sh /tmp/monitoolbackuat
+    - stage: deploy
+      if: branch = master
+      install:
+        # Decrypt the git_deploy_key.enc key into /tmp/monitoolbackuat
+        - openssl aes-256-cbc -K $encrypted_4ee49d49f72a_key -iv $encrypted_4ee49d49f72a_iv -in keys/monitoolbackprod.enc -out /tmp/monitoolbackprod -d
+        # Make sure only the current user can read the private key
+        - chmod 600 /tmp/monitoolbackprod
+        # Create a script to return the passphrase environment variable to ssh-add
+        - echo 'echo ${SSH_PASSPHRASE_PROD}' > /tmp/askpass && chmod +x /tmp/askpass
+        # Start the authentication agent
+        - eval "$(ssh-agent -s)"
+        # Add the key to the authentication agent
+        - DISPLAY=":0.0" SSH_ASKPASS="/tmp/askpass" setsid ssh-add /tmp/monitoolbackprod </dev/null
+      script: ./CI/deploy-prod.sh /tmp/monitoolbackprod
 
