--- a/unused/frontend/package.json
+++ b/unused/frontend/package.json
@@ -4,7 +4,6 @@
   "version": "2.7.0",
   "license": "GPL-3.0+",
   "dependencies": {
-    "@bower_components/font-awesome": "FortAwesome/Font-Awesome#~4.6.3",
     "@uirouter/angularjs": "^1.0.15",
     "angular": "^1.6.10",
     "angular-legacy-sortablejs-maintained": "^0.6.1",
@@ -20,6 +19,7 @@
     "factorial": "^1.0.0",
     "fast-json-patch": "^2.0.6",
     "file-saver": "^1.3.8",
+    "font-awesome": "^4.6.3",
     "handsontable": "2.0.0",
     "sortablejs": "^1.7.0",
     "timeslot-dag": "^0.1.1",
@@ -31,22 +31,16 @@
     "babel-plugin-angularjs-annotate": "^0.8.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
-    "brotli-webpack-plugin": "^0.5.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.15",
-    "zopfli-webpack-plugin": "^0.1.0"
-  },
-  "engines": {
-    "yarn": ">= 1.0.0"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "scripts": {
-    "build": "./node_modules/.bin/webpack -p",
-    "watch": "./node_modules/.bin/webpack --watch"
+    "serve": "webpack serve"
   }
 }
