--- a/api/lib/resource/schema/project.json
+++ b/api/lib/resource/schema/project.json
@@ -1,263 +1,328 @@
 {
-	"$schema": "http://json-schema.org/schema#",
-	"title": "Monitool project schema",
-	"type": "object",
-	"additionalProperties": false,
-	"required": [
-		"_id",
-		"type",
-		"name",
-		"themes",
-		"start",
-		"end",
-		"visibility",
-		"active",
-		"entities",
-		"groups",
-		"forms",
-		"crossCutting",
-		"logicalFrames",
-		"users",
-		"extraIndicators"
-	],
+  "$schema": "http://json-schema.org/schema#",
+  "title": "Monitool project schema",
+  "type": "object",
+  "additionalProperties": false,
+  "required": [
+    "_id",
+    "type",
+    "name",
+    "themes",
+    "start",
+    "end",
+    "visibility",
+    "active",
+    "entities",
+    "groups",
+    "forms",
+    "crossCutting",
+    "logicalFrames",
+    "users",
+    "extraIndicators"
+  ],
 
-	"properties": {
-		"_id": {
-			"type": "string",
-			"pattern": "^project:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
-		},
-		"_rev": {
-			"type": "string",
-			"pattern": "^[0-9]+\\-[0-9a-f]{32}$"
-		},
-		"type": { "type": "string", "pattern": "^project$" },
-		"country": { "type": "string", "minLength": 1 },
-		"name": { "type": "string", "minLength": 1 },
-		"start": { "type": "string", "format": "date" },
-		"end": { "type": "string", "format": "date" },
-		"visibility": { "type": "string", "enum": ["public", "private"]},
-		"active": { "type": "boolean" },
+  "properties": {
+    "_id": {
+      "type": "string",
+      "pattern": "^project:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
+    },
+    "_rev": {
+      "type": "string",
+      "pattern": "^[0-9]+\\-[0-9a-f]{32}$"
+    },
+    "type": { "type": "string", "pattern": "^project$" },
+    "country": { "type": "string", "minLength": 1 },
+    "name": { "type": "string", "minLength": 1 },
+    "start": { "type": "string", "format": "date" },
+    "end": { "type": "string", "format": "date" },
+    "visibility": { "type": "string", "enum": ["public", "private"] },
+    "active": { "type": "boolean" },
 
-		"entities": {
-			"type": "array",
-			"items": {
-				"id": { "$ref": "#/definitions/uuid" },
-				"name": { "type": "string", "minLength": 1 },
-				"start": { "oneOf": [{"type": "null"}, { "type": "string", "format": "date" }]},
-				"end": { "oneOf": [{"type": "null"}, { "type": "string", "format": "date" }]}
-			}
-		},
+    "entities": {
+      "type": "array",
+      "items": {
+        "id": { "$ref": "#/definitions/uuid" },
+        "name": { "type": "string", "minLength": 1 },
+        "start": {
+          "oneOf": [{ "type": "null" }, { "type": "string", "format": "date" }]
+        },
+        "end": {
+          "oneOf": [{ "type": "null" }, { "type": "string", "format": "date" }]
+        }
+      }
+    },
 
-		"groups": {
+    "groups": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "id": { "$ref": "#/definitions/uuid" },
+          "name": { "type": "string", "minLength": 1 },
+          "members": {
+            "type": "array",
+            "items": { "$ref": "#/definitions/uuid" }
+          }
+        }
+      }
+    },
+
+    "forms": {
+      "type": "array",
+      "items": { "type": "object" }
+    },
+
+    "users": {
+      "type": "array",
+      "items": {
+        "oneOf": [
+          {
+            "type": "object",
+            "additionalProperties": false,
+            "required": ["type", "id", "role"],
+            "properties": {
+              "type": { "type": "string", "pattern": "^internal$" },
+              "id": {
+                "type": "string",
+                "pattern": "^user:[a-z0-9\\.\\-\\_]+$"
+              },
+              "role": { "type": "string", "enum": ["owner", "read"] }
+            }
+          },
+          {
+            "type": "object",
+            "additionalProperties": false,
+            "required": ["type", "name", "role", "username", "password"],
+            "properties": {
+              "type": { "type": "string", "pattern": "^partner$" },
+              "name": { "type": "string", "minLength": 1 },
+              "role": { "type": "string", "enum": ["owner", "read"] },
+              "username": { "type": "string", "minLength": 1 },
+              "password": {
+                "oneOf": [
+                  { "type": "string", "minLength": 6 },
+                  { "type": "null" }
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "additionalProperties": false,
+            "required": ["type", "id", "role", "entities", "dataSources"],
+            "properties": {
+              "type": { "type": "string", "pattern": "^internal$" },
+              "id": {
+                "type": "string",
+                "pattern": "^user:[a-z0-9\\.\\-\\_]+$"
+              },
+              "role": { "type": "string", "enum": ["input"] },
+
+              "entities": {
+                "type": "array",
+                "uniqueItems": true,
+                "items": { "$ref": "#/definitions/uuid" }
+              },
+              "dataSources": {
+                "type": "array",
+                "uniqueItems": true,
+                "items": { "$ref": "#/definitions/uuid" }
+              }
+            }
+          },
+          {
+            "type": "object",
+            "additionalProperties": false,
+            "required": [
+              "name",
+              "password",
+              "role",
+              "type",
+              "username",
+              "entities",
+              "dataSources"
+            ],
+            "properties": {
+              "type": { "type": "string", "pattern": "^partner$" },
+              "name": { "type": "string", "minLength": 1 },
+              "role": { "type": "string", "enum": ["input"] },
+
+              "username": { "type": "string", "minLength": 1 },
+              "password": {
+                "oneOf": [
+                  { "type": "string", "minLength": 6 },
+                  { "type": "null" }
+                ]
+              },
+
+              "entities": {
+                "type": "array",
+                "uniqueItems": true,
+                "items": { "$ref": "#/definitions/uuid" }
+              },
+              "dataSources": {
+                "type": "array",
+                "uniqueItems": true,
+                "items": { "$ref": "#/definitions/uuid" }
+              }
+            }
+          }
+        ]
+      }
+    },
+
+    "themes": {
+      "type": "array",
+      "uniqueItems": true,
+      "items": {
+        "type": "string",
+        "pattern": "^theme:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
+      }
+    },
+
+    "logicalFrames": {
+      "type": "array",
+      "items": { "type": "object" }
+    },
+
+    "crossCutting": {
+      "type": "object",
+      "additionalProperties": false,
+      "patternProperties": {
+        "^indicator:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$": {
+          "$ref": "#/definitions/cc_indicator"
+        }
+      }
+    },
+
+    "extraIndicators": {
+      "type": "array",
+      "items": { "$ref": "#/definitions/indicator" }
+    },
+
+    "comments": {
 			"type": "array",
 			"items": {
 				"type": "object",
+				"additionalProperties": false,
+				"required": ["id", "path", "content"],
 				"properties": {
-					"id": { "$ref": "#/definitions/uuid" },
-					"name": { "type": "string", "minLength": 1 },
-					"members": { "type": "array", "items": { "$ref": "#/definitions/uuid" } }
-				}
-			}
-		},
-
-		"forms": {
-			"type": "array",
-			"items": {"type": "object"}
-		},
-
-		"users": {
-			"type": "array",
-			"items": {
-				"oneOf": [
-					{
-						"type": "object",
-						"additionalProperties": false,
-						"required": ["type", "id", "role"],
-						"properties": {
-							"type": {"type": "string", "pattern": "^internal$"},
-							"id": {"type": "string", "pattern": "^user:[a-z0-9\\.\\-\\_]+$"},
-							"role": {"type": "string", "enum": ["owner", "read"]}
-						}
+					"id": {
+						"type": "string",
+						"pattern": "^[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
 					},
-					{
-						"type": "object",
-						"additionalProperties": false,
-						"required": ["type", "name", "role", "username", "password"],
-						"properties": {
-							"type": {"type": "string", "pattern": "^partner$"},
-							"name": {"type": "string", "minLength": 1},
-							"role": {"type": "string", "enum": ["owner", "read"]},
-							"username": {"type": "string", "minLength": 1},
-							"password": {
-								"oneOf": [
-									{"type": "string", "minLength": 6},
-									{"type": "null"}
-								]
-							}
-						}
+					"path": {
+						"type": "string"
 					},
-					{
-						"type": "object",
-						"additionalProperties": false,
-						"required": ["type", "id", "role", "entities", "dataSources"],
-						"properties": {
-							"type": {"type": "string", "pattern": "^internal$"},
-							"id": {"type": "string", "pattern": "^user:[a-z0-9\\.\\-\\_]+$"},
-							"role": {"type": "string", "enum": ["input"]},
-
-							"entities": {
-								"type": "array",
-								"uniqueItems": true,
-								"items": { "$ref": "#/definitions/uuid" }
-							},
-							"dataSources": {
-								"type": "array",
-								"uniqueItems": true,
-								"items": { "$ref": "#/definitions/uuid" }
-							}
-						}
-					},
-					{
-						"type": "object",
-						"additionalProperties": false,
-						"required": ["name", "password", "role", "type", "username", "entities", "dataSources"],
-						"properties": {
-							"type": {"type": "string", "pattern": "^partner$"},
-							"name": {"type": "string", "minLength": 1},
-							"role": {"type": "string", "enum": ["input"]},
-
-							"username": {"type": "string", "minLength": 1},
-							"password": {
-								"oneOf": [
-									{"type": "string", "minLength": 6},
-									{"type": "null"}
-								]
-							},
-
-							"entities": {
-								"type": "array",
-								"uniqueItems": true,
-								"items": { "$ref": "#/definitions/uuid" }
-							},
-							"dataSources": {
-								"type": "array",
-								"uniqueItems": true,
-								"items": { "$ref": "#/definitions/uuid" }
-							}
-						}
-					}
-				]
-			}
-		},
-
-		"themes": {
-			"type": "array",
-			"uniqueItems": true,
-			"items": {
-				"type": "string",
-				"pattern": "^theme:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
-			}
-		},
-
-		"logicalFrames": {
-			"type": "array",
-			"items": { "type": "object" }
-		},
-
-		"crossCutting": {
-			"type": "object",
-			"additionalProperties": false,
-			"patternProperties": {
-				"^indicator:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$": {
-					"$ref": "#/definitions/cc_indicator"
-				}
-			}
-		},
-
-		"extraIndicators": {
-			"type": "array",
-			"items": {"$ref": "#/definitions/indicator"}
-		}
-	},
-
-	"definitions": {
-		"uuid": {
-			"type": "string",
-			"pattern": "^[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
-		},
-
-		"computation": {
-
-			"oneOf": [
-				{
-					"type": "object",
-					"additionalProperties": false,
-					"required": ["formula", "parameters"],
-					"properties": {
-
-						"formula": {
-							"type": "string",
-							"minLength": 1
-						},
-
-						"parameters": {
+					"content": {
+						"type": "array",
+						"items": {
 							"type": "object",
 							"additionalProperties": false,
-							"patternProperties": {
-								".*": {
+							"required": ["filter"],
+							"properties": {
+								"filter": {
 									"type": "object",
 									"additionalProperties": false,
-									"required": ["elementId", "filter"],
+									"required": [
+										"dateStart",
+										"dateEnd",
+										"dimension",
+										"disaggregatedBy"
+									],
 									"properties": {
-										"elementId": {"$ref": "#/definitions/uuid"},
-										"filter": {
-											"type": "object",
-											"additionalProperties": false,
-											"patternProperties": {
-												".*": {
-													"type": "array",
-													"items": {"$ref": "#/definitions/uuid"}
-												}
-											}
-										}
+										"dateStart": { "type": "string" },
+										"dateEnd": { "type": "string" },
+										"dimension": { "type": "string" },
+										"disaggregatedBy": { "type": "object" }
 									}
-								}
+								},
+								"comment": { "type": "string" },
+								"comments": { "type": "object" }
 							}
 						}
 					}
-				},
-				{"type": "null"}
-			]
-		},
-
-		"indicator": {
-			"type": "object",
-			"additionalProperties": false,
-			"required": ["baseline", "target", "colorize", "display", "computation"],
-			"properties": {
-				"display": {"type": "string", "minLength": 1},
-				"baseline": {"oneOf": [{"type": "null"}, {"type": "number"}]},
-				"target": {"oneOf": [{"type": "null"}, {"type": "number"}]},
-				"colorize": {"type": "boolean"},
-				"computation": { "$ref": "#/definitions/computation" }
+				}
 			}
-		},
-
-		"cc_indicator": {
-			"type": "object",
-			"additionalProperties": false,
-			"required": ["baseline", "target", "colorize", "computation"],
-			"properties": {
-				"baseline": {"oneOf": [{"type": "null"}, {"type": "number"}]},
-				"target": {"oneOf": [{"type": "null"}, {"type": "number"}]},
-				"colorize": {"type": "boolean"},
-				"computation": { "$ref": "#/definitions/computation" }
-			}
-		},
-
-		"indicators": {
-			"type": "array",
-			"items": { "$ref": "#/definitions/indicator" }
 		}
-	}
+  },
+
+  "definitions": {
+    "uuid": {
+      "type": "string",
+      "pattern": "^[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
+    },
+
+    "computation": {
+      "oneOf": [
+        {
+          "type": "object",
+          "additionalProperties": false,
+          "required": ["formula", "parameters"],
+          "properties": {
+            "formula": {
+              "type": "string",
+              "minLength": 1
+            },
+
+            "parameters": {
+              "type": "object",
+              "additionalProperties": false,
+              "patternProperties": {
+                ".*": {
+                  "type": "object",
+                  "additionalProperties": false,
+                  "required": ["elementId", "filter"],
+                  "properties": {
+                    "elementId": { "$ref": "#/definitions/uuid" },
+                    "filter": {
+                      "type": "object",
+                      "additionalProperties": false,
+                      "patternProperties": {
+                        ".*": {
+                          "type": "array",
+                          "items": { "$ref": "#/definitions/uuid" }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        { "type": "null" }
+      ]
+    },
+
+    "indicator": {
+      "type": "object",
+      "additionalProperties": false,
+      "required": ["baseline", "target", "colorize", "display", "computation"],
+      "properties": {
+        "display": { "type": "string", "minLength": 1 },
+        "baseline": { "oneOf": [{ "type": "null" }, { "type": "number" }] },
+        "target": { "oneOf": [{ "type": "null" }, { "type": "number" }] },
+        "colorize": { "type": "boolean" },
+        "computation": { "$ref": "#/definitions/computation" }
+      }
+    },
+
+    "cc_indicator": {
+      "type": "object",
+      "additionalProperties": false,
+      "required": ["baseline", "target", "colorize", "computation"],
+      "properties": {
+        "baseline": { "oneOf": [{ "type": "null" }, { "type": "number" }] },
+        "target": { "oneOf": [{ "type": "null" }, { "type": "number" }] },
+        "colorize": { "type": "boolean" },
+        "computation": { "$ref": "#/definitions/computation" }
+      }
+    },
+
+    "indicators": {
+      "type": "array",
+      "items": { "$ref": "#/definitions/indicator" }
+    }
+  }
 }
