implemented new exceljs package in currentview endpoint

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,9 +6,14 @@
 FROM node:10 as builder
 WORKDIR /app
 
+## Install prod + dev dependencies
+#COPY package.json yarn.lock ./
+#RUN yarn install --frozen-lockfile
+
 # Install prod + dev dependencies
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+COPY package.json ./
+COPY yarn.lock ./
+RUN yarn install --ignore-platform --ignore-engines
 
 # Build source code
 COPY lib ./lib
@@ -22,9 +27,14 @@ RUN yarn run build
 FROM node:10-slim as production
 WORKDIR /app
 
+## Install prod dependencies only
+#COPY package.json yarn.lock ./
+#RUN yarn install --production --frozen-lockfile
+
 # Install prod dependencies only
-COPY package.json yarn.lock ./
-RUN yarn install --production --frozen-lockfile
+COPY package.json ./
+COPY yarn.lock ./
+RUN yarn install --production --ignore-platform --ignore-engines
 
 # Retrieve pre-built source code from previous stage
 COPY --from=builder /app/dist ./dist
