--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "@koa/router": "^10.0.0",
     "cors": "^2.8.5",
     "exceljs": "^4.2.0",
+    "@zlooun/exceljs": "*",
     "expr-eval": "^1.2.1",
     "fast-json-patch": "^2.0.6",
     "is-my-json-valid": "x",
