fix issue with projects with comments

--- a/api/lib/resource/schema/project.json
+++ b/api/lib/resource/schema/project.json
@@ -229,6 +229,8 @@
 										"disaggregatedBy"
 									],
 									"properties": {
+                    "dateStart": { "type": "string" },
+                    "dateEnd": { "type": "string" },
 										"dimension": { "type": "string" },
 										"disaggregatedBy": { "type": "object" }
 									}
