Update project model to add optional id

--- a/api/lib/resource/schema/project.json
+++ b/api/lib/resource/schema/project.json
@@ -321,6 +321,10 @@
       "additionalProperties": false,
       "required": ["baseline", "target", "colorize", "computation"],
       "properties": {
+        "id": {
+          "type": "string",
+          "pattern": "^indicator:[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}$"
+        },
         "baseline": { "oneOf": [{ "type": "null" }, { "type": "number" }] },
         "target": { "oneOf": [{ "type": "null" }, { "type": "number" }] },
         "colorize": { "type": "boolean" },
