fix comments issue

--- a/api/lib/resource/schema/project.json
+++ b/api/lib/resource/schema/project.json
@@ -241,7 +241,7 @@
                   "additionalProperties": false,
                   "required": ["value"],
                   "properties": {
-                    "value": { "type": "string" },
+                    "value": { "type": "any" },
                     "cellValue": { "type": "string" }
                   }
                 },
